add meta peroperties

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/mojibi_favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="文字のビンゴ、MOJIBI！8つの単語でなるべく多くの列をそろえよう！" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<meta name="theme-color" content="#538D4E" />
+		<meta
+			name="description"
+			content="Mojibi: Wordleからインスパイアされた文字のビンゴゲーム。4文字のひらがな単語を入力し、なるべく多くの列をそろえて、ハイスコアを目指そう！"
+		/>
+		<meta name="keywords" content="Mojibi, ">
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/mojibi_logo_192x192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-		<title>Mojibi</title>
+		<meta property="og:title" content="Mojibi" />
+		<meta property="og:description" content="Mojibi: Wordleからインスパイアされた文字のビンゴゲーム。4文字のひらがな単語を入力し、なるべく多くの列をそろえて、ハイスコアを目指そう！" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://n2dev.github.io/mojibi/" />
+		<meta property="og:image" content="%PUBLIC_URL%/mojibi_og_1200x630.png" />
+		<meta property="og:site_name" content="Mojibi" />
+		<meta property="og:locale" content="ja_JP" />
+		<title>Mojibi - 日替わり単語ゲーム</title>
 	</head>
 	<body>
 		<div id="root"></div>
